fix on whatsapp number, added sliderbar on mobile

--- a/src/styles/layout/_home-slider.scss
+++ b/src/styles/layout/_home-slider.scss
@@ -1,6 +1,6 @@
 .home-slider {
-  @media only screen and (max-width: $bp-small) {
-    display: none;
-  }
+  // @media only screen and (max-width: $bp-small) {
+  //   display: none;
+  // }
 }
 
